--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="video-player__controls">
           <button class="button" id="backward"></button>
           <button class="button" id="play"></button>
-          <button class="button" id="pause"></button>
+          <button class="button" id="pause" hidden></button>
           <button class="button" id="forward"></button>
           <!-- <button class="button" id="xD">xD</button> -->
         </div>
