--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </header>
         <div class="video-player__controls">
           <button class="button" id="backward" area-label="Retroceder 10 segundos"></button>
-          <button class="button" id="play" area-label="Reproducir el video"></button>
-          <button class="button" id="pause" hidden area-label="Pausar el video"></button>
+          <button class="button" id="play" hidden area-label="Reproducir el video"></button>
+          <button class="button" id="pause" area-label="Pausar el video"></button>
           <button class="button" id="forward" area-label="Adelantar 10 segundos"></button>
           <!-- <button class="button" id="xD">xD</button> -->
         </div>
